environments/production/kustomizations/keycloak/keycloak-auth.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
      - name: keycloak
        args: ["start"]
