environments/production/kustomizations/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: keycloak.ryansquared.pub
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.ryansquared.pub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
  tls:
  - hosts:
    - keycloak.ryansquared.pub
    secretName: website-tls
